<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/mediaCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="fitCenter"
            android:paddingBottom="0dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favoriteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@drawable/ic_favorite_border"
            android:contentDescription="@string/favorite_button" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:text= "@string/city_name"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text= "@string/event_name"
            android:textStyle="bold"
            android:textColor="#CCB4F6"
            android:paddingBottom="2dp"/>

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text= "@string/owner_name"
            android:textStyle="bold"
            android:paddingBottom="14dp"/>

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/summary"
            android:textStyle="italic"
            android:paddingBottom="20dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/eventQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kuota"
                android:textSize="14sp"
                android:layout_marginStart="9dp"
                android:drawableStart="@drawable/ic_quota"
                android:drawableTint="#FFC107"
                android:drawablePadding="8dp"
                android:paddingBottom="7dp"
                android:gravity="center_vertical" />


            <TextView
                android:id="@+id/sisaQuota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/_0"
                android:drawablePadding="8dp"
                android:paddingBottom="7dp"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textBeginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/mulai_pukul"
                android:textSize="14sp"
                android:layout_marginStart="9dp"
                android:drawableStart="@drawable/ic_begin_time"
                android:drawableTint="#FFC107"
                android:drawablePadding="8dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/beginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text= "@string/_00_00"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textWaktu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text= "@string/wib"
                android:textSize="14sp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/durationText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/durasi"
                android:textSize="14sp"
                android:layout_marginStart="9dp"
                android:drawableStart="@drawable/ic_durasi"
                android:drawableTint="#FFC107"
                android:drawablePadding="8dp"/>

            <TextView
                android:id="@+id/durationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/_00"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textJam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:text="@string/jam"
                android:textSize="14sp"
                android:paddingBottom="20dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

    </LinearLayout>

</ScrollView>
